--- a/main/apps/employees/employee-list/employee-list.component.scss
+++ b/main/apps/employees/employee-list/employee-list.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-emloyees-emloyee-list {
+emloyees-employee-list {
     display: flex;
     flex: 1 1 auto;
     width: 100%;
@@ -44,7 +44,7 @@ emloyees-emloyee-list {
     }
 }
 
-#add-emloyee-button {
+#add-employee-button {
     position: absolute;
     bottom: 12px;
     right: 12px;
