--- a/main/apps/calendar/calendar.component.scss
+++ b/main/apps/calendar/calendar.component.scss
@@ -1,6 +1,12 @@
 @import "src/@lambda/scss/lambda";
 @import "node_modules/angular-calendar/scss/angular-calendar";
-
+navbar.horizontal-style-1,toolbar,lambda-sidebar.chat-panel,[_nghost-c0] .theme-options-button[_ngcontent-c0]{
+    display: none;
+}
+horizontal-layout-1 #main{
+    padding-left: 0 !important;
+    padding-bottom: 0 !important;
+}
 .cal-month-view {
 
     .cal-header {
